--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -223,7 +223,7 @@
   linkedin: https://www.linkedin.com/company/threedium
   discord: https://discord.gg/89Vt4Ddg
   youtube: https://www.youtube.com/channel/UCO6WXEwHrtWHUzBxzvr3XdA
-  image: /images/partners/threedium.svg
+  image: /images/partners/threedium.jpg
   description: The all-in-one 3d/ar engine to build and launch immersive commerce experiences and phygital wearables across any digital, physical or metaverse channel at scale.
   location: Uk
   langague:
