--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -217,6 +217,7 @@
   partnerId: 26
   default_link: https://www.threedium.co.uk
   website: https://www.threedium.co.uk
+  phone: +442034886790
   email: info@threedium.co.uk
   twitter: https://twitter.com/Threedium
   instagram: https://www.instagram.com/threedium3d/ 
