--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -16,7 +16,7 @@
 - name: Low Poly Models
   partnerId: 2
   default_link: https://www.lowpolymodelsworld.com/
-  website: www.lowpolymodelsworld.com
+  website: https://www.lowpolymodelsworld.com/
   discord: https://discordapp.com/users/584069387439570964/
   twitter: https://twitter.com/lowpolymodelsw
   youtube: https://www.youtube.com/c/KatherineJoelleWalker/videos
