--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -163,6 +163,21 @@
   tags:
     - Wearables
     - Architect
+- name: Polygonal Mind
+  partnerId: 12
+  default_link: https://www.polygonalmind.com/
+  website: https://www.polygonalmind.com/
+  discord: https://discord.com/invite/m2cAVSn
+  twitter: https://twitter.com/polygonalmind
+  instagram: https://www.instagram.com/polygonalmind/
+  linkedin: https://www.linkedin.com/company/polygonal-mind/
+  portfolio: https://www.metaversebuilder.co/portfolio
+  email: info@polygonalmind.com
+  image: /images/partners/polygonal-mind.png
+  description: Building Decentraland since 2019. Our dedicated Decentraland team imagines, designs and develops experiences, games and Crypto-Art galleries. Over 35 projects and more than 3k LANDs constructed in the Decentraland Metaverse.
+  tags:
+    - Wearables
+    - Architect
 
 - name: Sugar Club
   partnerId: 13
