--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -378,9 +378,9 @@
   instagram: https://www.instagram.com/bioma_nft/
   linkedin: https://www.linkedin.com/in/carolinamunozawad/
   image: /images/partners/bioma.png
-  description: bioma is a project to threedeemodel the metaverse. Based on the idea of a biome: "a large naturally occurring community occupying a major habitat”, we offer a design experience that revolves around the performativity of the body, virtual materiality, and how these two interact.
- location: United States
- languages:
+  description: "Bioma is a project to threedeemodel the metaverse. Based on the idea of a biome: "a large naturally occurring community occupying a major habitat”, we offer a design experience that revolves around the performativity of the body, virtual materiality, and how these two interact."
+  location: United States
+  languages:
     - English
     - Spanish
   payments:
