--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -348,6 +348,7 @@
     - Wearables
     - Events 
     - Land Rental
+    - Large Studio
   payments:
     - Crypto
 - name: Renovi Studios
@@ -370,6 +371,7 @@
     - Architect
     - Land Rental
     - Full Production
+    - Small Studio
 - name: Bioma
   partnerId: 29
   default_link: http://www.biomanft.xyz/
