--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -372,4 +372,26 @@
     - Land Rental
     - Full Production
     - Small Studio
+- name: Bioma
+  partnerId: 29
+  default_link: http://www.biomanft.xyz/
+  website: http://www.biomanft.xyz/
+  twitter: https://twitter.com/bioma_nft
+  instagram: https://www.instagram.com/bioma_nft/
+  linkedin: https://www.linkedin.com/in/carolinamunozawad/
+  image: /images/partners/bioma.png
+  description: "Bioma is a project to threedeemodel the metaverse. Based on the idea of a biome: 'a large naturally occurring community occupying a major habitat', we offer a design experience that revolves around the performativity of the body, virtual materiality, and how these two interact."
+  location: United States
+  languages:
+    - English
+    - Spanish
+  payments:
+    - Crypto
+    - PayPal
+  tags:
+    - Individual
+    - Wearables
+    - Architect
+  phone: +16462033991
+
 
