--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -393,5 +393,28 @@
     - Wearables
     - Architect
   phone: +16462033991
+- name: Fireworks Design Studio
+  partnerId: 30
+  default_link: kenny.fws@gmail.com
+  website: https://www.fireworksdesignstudio.com/
+  discord: https://discord.gg/kenny.fireworks#2880
+  twitter: https://twitter.com/KennyFireworks
+  instagram: https://www.instagram.com/fireworks_design_studio/
+  linkedin: https://www.linkedin.com/in/idr-kenny-yap-b8613536/
+  email: kenny.fws@gmail.com
+  parcel.so: https://parcel.so/creatorverse/creator/fireworks-design-studio
+  image: /images/partners/fireworksdesignstudio.png
+  description: The exploration of ideas from all directions without boundaries and restrictions. Such are the design principles of Fireworks Design Studio, a KL-based interior design firm established in 2008 by Kenny Yap, a professionally trained interior design veteran with more than 20 years of experience in the industry. Built upon the philosophy that every project should be approached with a fresh perspective, Fireworks Design Studio recognizes that each different space possesses a unique identity and thus deserves its very own design language to convey its characteristics to the fullest potential. Ultimately, every idea and inspiration stems from the client’s story and is interwoven into the environment through a modern and functional design approach. Fireworks Design Studio has strong expertise in residential and commercial projects and provides end-to-end interior design services that include consultancy and interior fit-out. The design firm's principle of transcending the norms of interior design is applied in a wide range of works, from private residences and high-rise developments to corporate offices and tailor-made retail spaces and now the Metaverse
+  location: Malaysia
+  languages:
+    - English
+    - Chinese
+  payments:
+    - Crypto
+    - Wire
+  tags:
+    - Architect
+    - Full Production
+    - Medium Size Studio
 
 
