--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -395,7 +395,7 @@
   phone: +16462033991
 - name: Fireworks Design Studio
   partnerId: 30
-  default_link: kenny.fws@gmail.com
+  default_link: https://www.fireworksdesignstudio.com/
   website: https://www.fireworksdesignstudio.com/
   discord: https://discord.gg/kenny.fireworks#2880
   twitter: https://twitter.com/KennyFireworks
