--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -13,6 +13,17 @@
   tags:
     - Wearables
     - Architect
+    - 3D
+    - Land Rental
+    - Full Production
+    - Events
+  payments:
+    - Crypto
+    - Wire
+  languages:
+    - English
+  location: Russia
+  team_size: Large Studio
 - name: Low Poly Models
   partnerId: 2
   default_link: https://www.lowpolymodelsworld.com/
@@ -26,17 +37,18 @@
   image: /images/partners/lowpolymodels.png
   description: Low Poly Models specialise in developing high quality custom 3D assets like wearables, NPCs and or gamified scenes in the smallest possible data packages.  They have been in Decentraland working closely with the community and The Foundation since early 2019, creating scenes, asset packs and curating wearables via the Curation Committee.  The LPM team is very familiar with the ecosystem for wearable approvals, voting and community events.  They focus on making graphics load faster to improve the overall experience for both brand and user. Customisation and compaction like this is ideal for open source metaverses like Decentraland. Low Poly Models have helped brands such as Alison Wonderland, Async Art, Atari ®, Coca-Cola, CNN Brasil, Eden Reforestation Projects, Fred Segal, Jose Delbo, Known Origin, Maserati, $MEME, Mintbase, NIVA, NonFungible, Playboy, RTFKT, Subnation, SuperRare and $Whale.
   location: Spain
-  
+  team_size: Small Studio
   languages:
     - English
     - Spanish
   payments:
     - Crypto
     - Wire
-    - Paypal
+    - PayPal
   tags:
     - Wearables
     - Architect
+    - 3D
     - Events
     - Full Production
 - name: Voxel Architects
@@ -48,6 +60,8 @@
   instagram: https://www.instagram.com/voxel.architects/
   image: /images/partners/voxel-architects.jpeg
   description: Voxel Architects is one of the first metaverse-native architecture studios, committed to designing stunning virtual structures and experiences in the leading virtual worlds. Founded in 2020, and with over 100 projects in their portfolio, Voxel Architects helped artists, brands, and companies such as ConsenSys, Metamask, Sotheby's, Auroboros, Real Vision and Tom Sachs, among many others. No matter the size and the difficulty of the project, Voxel Architects will build it.
+  location: Portugal
+  team_size: Large Studio
   languages:
     - English
     - Spanish
@@ -58,6 +72,7 @@
   tags:
     - Wearables
     - Architect
+    - 3D
     - Events
     - Full Production
 - name: Vegas City
@@ -73,6 +88,7 @@
   tags:
     - Wearables
     - Architect
+    - 3D
     - Events
     - Full Production
 - name: Malloy
@@ -83,15 +99,18 @@
   image: /images/partners/malloy.png
   description: We Activate brands in the Metevarse and connect them to over 50,000 web3 and metaverse native users.
   location: United Kindom
+  team_size: Small Studio
   languages:
     - English
   payments:
     - Crypto
     - Wire
     - Card
-    - Paypal
+    - PayPal
   tags:
     - Wearables
+    - Architect
+    - Full Production
     - Events
 - name: Kollektiff
   partnerId: 6
@@ -127,8 +146,16 @@
   gitbook: https://fabeeobreen.gitbook.io/
   image: /images/partners/fabeeo-breen.jpeg
   description: Fabeeo Breen is a Metaverse fashion Brand & Digital studio providing services in 3D animation and dynamic simulations, NFT collections, wearables, virtual world showrooms and avatar development.
+  location: Italy
+  languages:
+    - English
+    - Italian
+  team_size: Individual
+  payments:
+    - Crypto
+    - Wire
+    - PayPal
   tags:
-    - Individual
     - Wearables
 - name: XR Couture
   partnerId: 10
@@ -144,13 +171,14 @@
   image: /images/partners/xrcouture.webp
   description: XR Couture is a leading digital fashion platform that enables brands to enter the metaverse and enables users to purchase and experience limited edition collectibles in the digital world. Bespoke solutions focusing on web3. We create digital assets and suggest marketing and collaboration partners to launch various metaverse assets including NFTs.
   location: India
+  team_size: Large Studio
   langague:
     - English
   payments:
     - Crypto
     - Wire
     - Card
-    - Paypal
+    - PayPal
   tags:
     - Wearables
 - name: MetaSkins
@@ -178,17 +206,20 @@
   schetchfab: https://sketchfab.com/polygonalmind
   image: /images/partners/polygonal-mind.png
   description: "Creative Development Studio that imagines, designs and develops stunning environments, avatars, wearables, games and experiences for the Metaverse. We're focused on optimization, lowpoly and beautiful aesthetics. We build what cannot be built in real life, with an extra touch of magic and love."
+  location: Spain
+  team_size: Large Studio
   languages:
     - English
     - Spanish
   payments:
     - Crypto
     - Wire
-    - Paypal
+    - PayPal
     - Credit Card
   tags:
     - Wearables
     - Architect
+    - 3D
     - Events
     - Land Rental
     - Full Production
@@ -202,8 +233,18 @@
   instagram: https://www.instagram.com/sugarclub.eth/
   image: /images/partners/sugar-club.png
   description: Digital designer. Virtual reality. Metaverse explorer.
+  location: France
+  team_size: Individual
+  payments:
+    - Crypto
+  languages:
+    - English
+    - Frech
   tags:
     - Wearables
+    - Architect
+    - Events
+    - Full Production
 - name: Studio Sparkles 
   partnerId: 14
   default_link: https://www.sparkles.studio/
@@ -213,6 +254,11 @@
   twitter: https://twitter.com/studio_sparkles
   image: /images/partners/sparkles-studio.jpeg
   description: Boutique Animation Studio making digital realms sparkle. We produce both 2d and 3d animation, storyboards and animatics for any pitch or project, and avatars that look good in any metaverse!
+  location: Canada
+  languages:
+    - English
+  payments:
+    - Crypto
   tags:
     - Wearables
 - name: TerraZero Technologies
@@ -240,12 +286,20 @@
   linkedin: https://www.linkedin.com/company/cominted-labs
   image: /images/partners/cominted-labs.png
   description: Cominted Labs is a metaverse studio building experiences in Decentraland. We are your partner from strategy to execution. Our world-class team of experts, designers, and developers will bring your vision to life in the metaverse!
+  team_size: Medium Studio
+  location: United States
+  languages: 
+    - English
+  payments:
+    - Crypto
+    - Wire
+    - PayPal
   tags:
     - Wearables
     - Architect
     - Events 
     - Full Production
-- name: Spaces DAO
+- name: SpacesDAO
   partnerId: 22
   default_link: https://spacesdao.xyz/
   website: https://spacesdao.xyz/
@@ -255,6 +309,14 @@
   phone: +34683585943
   image: /images/partners/spaces.jpg
   description: Spaces is a collective of architects, artists and developers dedicated to the design of tailored spaces and experiences for the metaverse. At the core of our design philosophy, we imagine and build the unbuildable, defying real life limitations, yet grounded with a seamless combination of organic and futuristic experiences.
+  location: Spain
+  languages: 
+    - Spanish
+    - English
+  team_size: Small Studio
+  payments: 
+    - Crypto
+    - Wire
   tags:
     - Wearables
     - Architect
@@ -270,6 +332,13 @@
   phone: +91-7477211984
   image: /images/partners/filmrare.png
   description: Filmrare is Decentraland´s longest-running cineplex and a venue with multiple screens and gallery floors backed by a DAO grant.
+  location: India
+  languages: 
+    - English
+  team_size: Small Studio
+  payments: 
+    - Crypto
+    - Wire
   tags:
     - Events
 - name: METAVERSE Architects
@@ -284,13 +353,22 @@
   youtube: https://www.youtube.com/channel/UCSyJdSHKMt_mobKzdKRLCew
   image: /images/partners/metaverse.architects.jpg
   description: Metaverse Architects is a 3D Modelling & Game Development studio for the Metaverse. We design and develop for Decentraland and all Metaverse worlds. Bringing your brand to the Virtual World in a playful and engaging way.
+  location: Malta
+  languages: 
+    - English
+  team_size: Medium Studio
+  payments: 
+    - Crypto
+    - Wire
+    - PayPal
   tags:
     - Wearables
     - Architect
+    - 3D
     - Events 
     - Full Production
     - Land Rental
-- name: Beatblox Studio & Music District
+- name: BeatBlox Studio & Music District
   partnerId: 25
   default_link: https://www.beatblox.org/
   website: https://www.beatblox.org/
@@ -303,8 +381,16 @@
   youtube: https://www.youtube.com/channel/UCo2dvKd4KcvURIVIesL9NZQ
   image: /images/partners/beatblox.jpg
   description: BeatBlox is a new musical landscape. A platform that allows artists and audiences to connect through the implementation of Blockchain Technology. It is a vehicle to explore new dynamics of interaction and commercialization empowering independent creativity.
+  location: Argentina
+  languages: 
+    - Spanish
+    - English
+  team_size: Medium Studio
+  payments: 
+    - Crypto
   tags:
     - Architect
+    - 3D
     - Events 
     - Full Production
     - Land Rental
@@ -321,15 +407,20 @@
   youtube: https://www.youtube.com/channel/UCO6WXEwHrtWHUzBxzvr3XdA
   image: /images/partners/threedium.jpg
   description: The all-in-one 3d/ar engine to build and launch immersive commerce experiences and phygital wearables across any digital, physical or metaverse channel at scale.
-  location: Uk
+  location: United Kingdom
+  team_size: Large Studio
   languages:
     - English
     - Spanish
     - German
     - Greek
+  payments:
+    - Crypto
+    - Wire
   tags:
     - Wearables
     - Architect 
+    - 3D
     - Full Production
     - Land Rental
 - name: Decentral Games
@@ -341,14 +432,15 @@
   linkedin: https://www.linkedin.com/in/milesanthony760
   image: /images/partners/miles.jpg
   description: Decentral Games builds ICE Poker, the first metaverse-native, play-and-own poker game that give players economic freedom through self-custody and delegation of wearables.
-  location: British
+  location: British Virgin Islands
+  team_size: Large Studio
   languages:
     - English
   tags:
     - Wearables
+    - 3D
     - Events 
     - Land Rental
-    - Large Studio
   payments:
     - Crypto
 - name: Renovi Studios
@@ -361,6 +453,7 @@
   linkedin: https://www.linkedin.com/company/renovinft
   image: /images/partners/renovistudios.png
   description: Renovi Studios is a Web3 agency that develops and builds Metaverse and NFT strategiesfor leading brands in the fashion, entertainment, sports, and hospitality sectors.
+  team_size: Small Studio
   location: United Kingdom
   languages:
     - English
@@ -371,7 +464,6 @@
     - Architect
     - Land Rental
     - Full Production
-    - Small Studio
 - name: Bioma
   partnerId: 29
   default_link: http://www.biomanft.xyz/
@@ -379,8 +471,10 @@
   twitter: https://twitter.com/bioma_nft
   instagram: https://www.instagram.com/bioma_nft/
   linkedin: https://www.linkedin.com/in/carolinamunozawad/
+  phone: +16462033991
   image: /images/partners/bioma.png
   description: "Bioma is a project to threedeemodel the metaverse. Based on the idea of a biome: 'a large naturally occurring community occupying a major habitat', we offer a design experience that revolves around the performativity of the body, virtual materiality, and how these two interact."
+  team_size: Individual
   location: United States
   languages:
     - English
@@ -389,10 +483,8 @@
     - Crypto
     - PayPal
   tags:
-    - Individual
     - Wearables
     - Architect
-  phone: +16462033991
 - name: Fireworks Design Studio
   partnerId: 30
   default_link: https://www.fireworksdesignstudio.com/
@@ -405,6 +497,7 @@
   parcel.so: https://parcel.so/creatorverse/creator/fireworks-design-studio
   image: /images/partners/fireworksdesignstudio.png
   description: The exploration of ideas from all directions without boundaries and restrictions. Such are the design principles of Fireworks Design Studio, a KL-based interior design firm established in 2008 by Kenny Yap, a professionally trained interior design veteran with more than 20 years of experience in the industry. Built upon the philosophy that every project should be approached with a fresh perspective, Fireworks Design Studio recognizes that each different space possesses a unique identity and thus deserves its very own design language to convey its characteristics to the fullest potential. Ultimately, every idea and inspiration stems from the client’s story and is interwoven into the environment through a modern and functional design approach. Fireworks Design Studio has strong expertise in residential and commercial projects and provides end-to-end interior design services that include consultancy and interior fit-out. The design firm's principle of transcending the norms of interior design is applied in a wide range of works, from private residences and high-rise developments to corporate offices and tailor-made retail spaces and now the Metaverse
+  team_size: Medium Studio
   location: Malaysia
   languages:
     - English
@@ -414,7 +507,4 @@
     - Wire
   tags:
     - Architect
-    - Full Production
-    - Medium Size Studio
-
 
