--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -507,4 +507,29 @@
     - Wire
   tags:
     - Architect
+- name: Pangea DAO
+  partnerId: 31
+  default_link: https://pangeadao.org
+  website: https://pangeadao.org
+  discord: http://discord.gg/pangea
+  twitter: https://twitter.com/PangeaDAO
+  linkedin: https://www.linkedin.com/company/pangeadao/
+  email: cato@pangeadao.org
+  image: /images/partners/pangeadao.jpeg
+  description: Metaverse land investment cooperative structured as a DAO with the goal of creating more equitable virtual worlds
+  team_size: Small Studio
+  location: New York, USA
+  languages:
+    - English
+    - Spanish
+    - French
+    - Danish
+  payments:
+    - Crypto
+  tags:
+    - Wearables
+    - Architect
+    - Events 
+    - Land Rental
+    - Full Production
 
