--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -515,7 +515,7 @@
   twitter: https://twitter.com/PangeaDAO
   linkedin: https://www.linkedin.com/company/pangeadao/
   email: cato@pangeadao.org
-  image: /images/partners/pangeadao.jpeg
+  image: /images/partners/pangea.jpeg
   description: Metaverse land investment cooperative structured as a DAO with the goal of creating more equitable virtual worlds
   team_size: Small Studio
   location: New York, USA
