--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -489,7 +489,7 @@
   partnerId: 30
   default_link: https://www.fireworksdesignstudio.com/
   website: https://www.fireworksdesignstudio.com/
-  discord: https://discord.gg/kenny.fireworks#2880
+  discord: https://discord.gg/Kgvu4TJP
   twitter: https://twitter.com/KennyFireworks
   instagram: https://www.instagram.com/fireworks_design_studio/
   linkedin: https://www.linkedin.com/in/idr-kenny-yap-b8613536/
