--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -536,6 +536,7 @@
   partnerId: 32
   default_link: michitodd@gmail.com
   website: https://mitchtodd.com/
+  email: michitodd@gmail.com
   twitter: https://twitter.com/michi_todd
   phone: +61433110043
   linkedin: https://www.linkedin.com/in/mitch-todd/
