--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -534,7 +534,7 @@
     - Full Production
 - name: Michi Todd
   partnerId: 32
-  default_link: michitodd@gmail.com
+  default_link: https://mitchtodd.com/
   website: https://mitchtodd.com/
   email: michitodd@gmail.com
   twitter: https://twitter.com/michi_todd
