--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -380,7 +380,7 @@
   discord: https://discord.gg/NycNghvb
   youtube: https://www.youtube.com/channel/UCo2dvKd4KcvURIVIesL9NZQ
   image: /images/partners/beatblox.jpg
-  description: BeatBlox is a new musical landscape. A platform that allows artists and audiences to connect through the implementation of Blockchain Technology. It is a vehicle to explore new dynamics of interaction and commercialization empowering independent creativity.
+  description: While we keep developing BeatBlox as a brand and positioning us as the main musical district in the metaverse, our in-house team is offering services to 3rd parties who want to activate their brand in the metaverse ecosystem. We highly believe in projects that want to create communities besides revenue, and mostly focused on brands who want to join the musical landscape as it gets built. Services we are offering go from Architecture & 3D Modeling from scratch, Interior Design & Landscaping, NFTs & Smart Contracts Development and Organizing Virtual Concerts & Music Festivals. We also provide pre designed spaces inside our 34 LANDs district for an easy and fast Decentraland onboarding for brands that align with us.
   location: Argentina
   languages: 
     - Spanish
