--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -506,9 +506,9 @@
   linkedin: https://www.linkedin.com/company/pangeadao/
   email: cato@pangeadao.org
   image: /images/partners/pangea.jpeg
-  description: Metaverse land investment cooperative structured as a DAO with the goal of creating more equitable virtual worlds
-  team_size: Small Studio
-  location: New York, USA
+  description: PangeaDAO is a Metaverse real estate trust that acquires, develops, and commercializes land in virtual worlds. Pangea’s investment, development, and consulting arms work to create a more equitable and accessible Metaverse for individuals, collectives, and brands.
+  team_size: Medium Studio
+  location: USA
   languages:
     - English
     - Spanish
