--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -595,14 +595,14 @@
     - Wearables
 - name: Luke Escobar
   partnerId: 35
-  default_link: https://doki3d.com/
+  default_link: http://www.discordapp.com/users/329781973973336074
   email: lukeescobar@gmail.com
   twitter: https://twitter.com/eellillee
   discord: http://www.discordapp.com/users/329781973973336074
   youtube: https://www.youtube.com/channel/UCNDNe8IvNeLoHXDER_fe-xg
   sketchfab: https://sketchfab.com/varchitecture
   phone: +12144155144
-  image: /images/partners/lukeescobar.png
+  image: /images/partners/2B5971FA-AB66-45C1-B7A8-6A2990000063.jpeg
   description: Decentraland Architecture, 3D Modeling, and Scene Design.
   location: USA
   languages:
