--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -167,7 +167,7 @@
   description: XR Couture is a leading digital fashion platform that enables brands to enter the metaverse and enables users to purchase and experience limited edition collectibles in the digital world. Bespoke solutions focusing on web3. We create digital assets and suggest marketing and collaboration partners to launch various metaverse assets including NFTs.
   location: India
   team_size: Medium Studio
-  langague:
+  language:
     - English
   payments:
     - Crypto
